src/pages/Profile/Collection.css
.checkbox {
  position: absolute;
  right: 10px;
  bottom: 10px;
}

.editing {
  position: relative;
  padding-top: 4rem;
  padding-left: 2rem;
}

.save-button, .square-button {
  position: absolute;
  top: 5px;
  right: 5px;
}

.cancel-button {
  position: absolute;
  top: 5px;
  left: 5px;
}

.input-container {
  width: 100%;
  overflow: hidden;
}

.input-container input {
  width: 80%;
  box-sizing: border-box; 
}

.observationImage {
  max-width: 95%;
  height: auto;
  display: block;
  margin: 20px auto;
  margin-right: 20px;
}

.cardContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: start;
  margin: 1rem 0;
  row-gap: 1rem;
}

.upload-picture {
  max-width: 50%;
  margin: 1rem auto;
}

.cardContainer > * {
  flex: 0 0 calc(50% - 20px);
}

@media (max-width: 768px) {
  .cardContainer > * {
    flex: 1 0 100%;
    margin: 0 auto;
  }
  .editing {
    padding-top: 5rem;
    padding-left: 4rem;
  }
  .input-container input {
    margin-bottom: 0.5rem;
  }
}

